code quality fixes
Intellij suggestions