@@ -2,27 +2,14 @@ package pbrg.webservices.servlets;
 
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
-import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpSession;
 
-import javax.naming.Context;
-import javax.naming.InitialContext;
-import javax.sql.DataSource;
-import java.io.IOException;
-import java.io.PrintWriter;
-import java.sql.Connection;
-import java.sql.PreparedStatement;
-import java.sql.ResultSet;
-import com.google.gson.Gson;
-import org.json.JSONObject;
-import java.util.*;
+import java.nio.charset.StandardCharsets;
 import java.io.*;
 import java.net.URLDecoder;
-
-import pbrg.webservices.models.LoggedInUser;
 
 @WebServlet(name = "LogoutServlet", urlPatterns = "/Logout")
 public class LogoutServlet extends MyHttpServlet {
@@ -38,12 +25,12 @@ public class LogoutServlet extends MyHttpServlet {
         Cookie[] cookies = request.getCookies();
         if (cookies != null) {
             for (Cookie cookie : cookies) {
-                System.out.println(URLDecoder.decode(cookie.getName(), "utf-8"));
-                if (URLDecoder.decode(cookie.getName(), "utf-8").equals("username")) {
+                System.out.println(URLDecoder.decode(cookie.getName(), StandardCharsets.UTF_8));
+                if (URLDecoder.decode(cookie.getName(), StandardCharsets.UTF_8).equals("username")) {
                     cookie.setMaxAge(0);
                     response.addCookie(cookie);
                 }
-                if (URLDecoder.decode(cookie.getName(), "utf-8").equals("uid")) {
+                if (URLDecoder.decode(cookie.getName(), StandardCharsets.UTF_8).equals("uid")) {
                     cookie.setMaxAge(0);
                     response.addCookie(cookie);
                 }
